--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@ th, td {
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
+
+tr:hover {background-color: coral;}
 </style>
 </head>
 <body>
 
-<h2>Bordered Table Dividers</h2>
-<p>Add the border-bottom property to th and td for horizontal dividers:</p>
+<h2>Hoverable Table</h2>
+
+<p>Move the mouse over the table rows to see the effect.</p>
 
 <table>
   <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-  <th>Savings</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Points</th>
   </tr>
   <tr>
     <td>David</td>
